Fix: Alignment of categories

--- a/global.css
+++ b/global.css
@@ -47,8 +47,10 @@ body {
   font-size: 0.8rem;
 }
 .categories {
-  align-self: flex-start;
-  justify-self: space-around;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 40%;
 }
 .question {
   align-self: center;
